Mon Apr 09 14:06:58 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Just assign to doclens[did].

Mon Apr 09 11:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/quartz/quartz_database.cc: Apply same change to quartz.

Mon Apr 09 11:24:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_database.cc: Fix bug with document lengths
	  in replace document.  Was using doclens.insert() to set the new
	  document length, but this has no effect if the entry already
	  exists.  This fixes replacedoc3 for flint (and thus for remote
	  databases), but the same change is needed for quartz.
	* backends/flint/flint_postlist.cc: Add some debugging lines.

Mon Apr 09 01:43:02 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/: Add some more debugging messages to help track
	  down the problem with document lengths shown up by previous
	  change.

Mon Apr 09 01:40:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_wrdb.cc: Add asserts to check that the value of
	  get_doclength() on the database and on the posting list are
	  correct.  Currently fails with the value from the posting list
	  for the document which has been replaced (or sooner if assertions
	  are turned on).

Sun Apr 08 23:24:20 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: `./configure --enable-quiet' allows you to
	  specify at configure time to pass `--quiet' to libtool.  Now you can
	  override this at make-time by using `make QUIET=' (to turn off
	  `--quiet') or `make QUIET=y' (to turn on `--quiet').

Sun Apr 08 23:23:50 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Mention AssertEqParanoid and AssertNeParanoid.

Sun Apr 08 22:45:45 BST 2007  Olly Betts <olly@survex.com>

	* common/omassert.h: Add AssertEqParanoid and AssertNeParanoid macros.
	* backends/flint/flint_table.cc,backends/inmemory/inmemory_database.cc,